force-app/main/default/objects/Account/fields/CopyBillingAddToShipping__c.field-meta.xml
<CustomField>
    <fullName>CopyBillingAddToShipping__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CopyBillingAddToShipping</label>
    <type>Checkbox</type>
</CustomField>