force-app/main/default/objects/Account/fields/Left_Employee_Count__c.field-meta.xml
<CustomField>
    <fullName>Left_Employee_Count__c</fullName>
    <description>for EmployeeDelTrigger</description>
    <label>Left Employee Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>